--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -20,12 +20,12 @@
                         <div class="products-content">
                             
                             <h3 class="products-content-title">ice cream</h3>
-                            <svg class="products-icon" width="26px" height="6px">
-                                <use href="./img/icon-products-dots.svg#products-icon"></use>
+                            <svg class="products-dots" width="26px" height="6px">
+                                <use href="./img/icon-products-dots.svg#products-dots"></use>
                             </svg>
                             <p class="products-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
-                            <svg class="" width="59px" height="47px">
-                                <use href="./img/"></use>
+                            <svg class="products-arrow" width="59px" height="47px">
+                                <use href="./img/icon-arrow.svg#products-arrow"></use>
                             </svg>
                         </div>
                     </li>
