--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -37,7 +37,8 @@
         <p class="contacts-tittle">FOODTRUCK</p>
         <p class="contacts-town">Chicago</p>
         <span class="contacts-about"
-          >Fusce ut velit laoreet, tempus arcu molestie vulputate</span
+          >Fusce ut velit laoreet, tempus arcu molestie vulputate
+          DJGJD:G:DG</span
         >
         <ul class="contacts-work-list">
           <li>
