--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -6,7 +6,8 @@
         <p class="contacts-tittle">Cafe</p>
         <p class="contacts-town">Chicago</p>
         <span class="contacts-about"
-          >Fusce ut velit laoreet, tempus arcu molestie vulputate</span
+          >Fusce ut velit laoreet, tempus arcu molestie vulputate
+          JSJSFLJLJD</span
         >
         <ul class="contacts-work-list">
           <li>
