--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -19,6 +19,7 @@
 
   margin-bottom: 25px;
   text-transform: uppercase;
+  font-weight: 500;
 
   background-color: #f0d1a5;
   color: var(--tittle-text-color);
@@ -28,26 +29,33 @@
 .contacts-town {
   color: var(--black);
   margin-bottom: 10px;
+  font-weight: 500;
 }
 
 .contacts-about {
-  color: var(--grey);
+  display: block;
   margin-bottom: 25px;
+
+  font-weight: 500;
+  color: var(--grey);
 }
 
 .contacts-work-list {
   padding-top: 25px;
   padding-bottom: 25px;
 
+  font-weight: 500;
   border-top: 1px solid #e1e1e1;
   border-bottom: 1px solid #e1e1e1;
 }
 
 .contacts-work-days {
   color: var(--black);
+  font-weight: 500;
 }
 
 .contacts-work-time {
+  font-weight: 500;
   color: var(--pink);
 }
 
@@ -56,5 +64,6 @@
 }
 
 .contacts-item {
+  font-weight: 500;
   color: var(--grey);
 }
