--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -22,6 +22,9 @@
   }
 
   @media screen and (min-width: 1280px) {
+    font-size: 30px;
+    line-height: 34px;
+    letter-spacing: 0.04em;
   }
 }
 
@@ -44,6 +47,9 @@
   }
 
   @media screen and (min-width: 1280px) {
+    font-size: 58px;
+    line-height: 66px;
+    letter-spacing: 0.06em;
   }
 }
 
@@ -51,14 +57,12 @@
 .products-item {
   @media screen and (min-width: 768px) {
     display: flex;
-  }
-
-  @media screen and (min-width: 1280px) {
+    justify-content: center;
   }
 }
 
 .products-list {
-  position: relative;
+  // position: relative;
 
   @media screen and (min-width: 768px) {
     &:not(:last-child) {
@@ -74,15 +78,32 @@
 }
 
 .products-content {
+  position: relative;
   width: 100%;
   max-width: 280px;
   height: 485px;
-  margin-top: 130px;
+  margin-top: 146px;
 
   padding-top: 116px;
+  padding-left: 40px;
+  padding-right: 40px;
 
   //   background: var(--pink);
   border-radius: 24px;
+
+  @media screen and (min-width: 768px) {
+    padding-left: 11px;
+    padding-right: 11px;
+    max-width: 220px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-left: 44px;
+    padding-right: 44px;
+
+    max-width: 329px;
+    max-height: 525px;
+  }
 
   &::before {
     content: '';
@@ -101,13 +122,6 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-  }
-
-  @media screen and (min-width: 768px) {
-    max-width: 220px;
-  }
-
-  @media screen and (min-width: 1280px) {
   }
 }
 
@@ -138,7 +152,9 @@
 // ============заголовок блока
 
 .products-content-title {
-  //   display: block;
+  position: relative;
+  display: block;
+
   margin-top: 22px;
   font-family: Titan One;
   font-style: normal;
@@ -154,18 +170,13 @@
   color: var(--white);
 
   &::after {
-    content: '...';
-
-    font-size: 26px;
-    line-height: 6px;
-    margin: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-
+    content: '';
+    // position: absolute;
+    background-image: url('../images/2-products/dots.svg');
+    width: 26px;
+    height: 6px;
+    margin: 30px auto;
     display: block;
-    justify-content: center;
-    // width: 6px;
-    // height: 6px;
   }
 }
 
@@ -224,4 +235,51 @@
 //                                 srcset="./images/2-products/320-ice-coffee.png 1x, ./images/2-products/320-ice-coffee@2x.png 2x, ./images/2-products/320-ice-coffee@2x.png 3x"
 //                                     media="(min-width: 320px)">
 //                                 <img src="./images/2-products/320-ice-coffee.png" alt="images ice-coffee">
-//                             </picture>
+//  </picture>
+
+.product-item {
+  width: 300px;
+  text-align: center;
+  margin: 0 auto;
+  border-bottom: 2px solid #f5f5f5;
+  background: white;
+  font-family: 'Open Sans';
+  transition: 0.3s ease-in;
+}
+.product-item:hover {
+  border-bottom: 2px solid #fc5a5a;
+}
+.product-item img {
+  display: block;
+  width: 100%;
+}
+.product-list {
+  background: #fafafa;
+  padding: 15px 0;
+}
+.product-list h3 {
+  font-size: 18px;
+  font-weight: 400;
+  color: #444444;
+  margin: 0 0 10px 0;
+}
+.price {
+  font-size: 16px;
+  color: #fc5a5a;
+  display: block;
+  margin-bottom: 12px;
+}
+.button {
+  text-decoration: none;
+  display: inline-block;
+  padding: 0 12px;
+  background: #cccccc;
+  color: white;
+  text-transform: uppercase;
+  font-size: 12px;
+  line-height: 28px;
+  transition: 0.3s ease-in;
+}
+.product-item:hover .button {
+  background: #fc5a5a;
+}
