--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -2,12 +2,18 @@
     <div class="container">
 <div class="swiper-container">
     <div class="swiper-wrapper">
-        <div class="swiper-slide">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
-        congue. Lorem ipsum primis in nibh vel risus.</div>
-        <div class="swiper-slide">Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
-        congue. Lorem ipsum primis in nibh vel risus.</div>
-        <div class="swiper-slide">Aliquam sem. In hendrerit nulla quam nunc, accumsan
-        congue. Lorem ipsum primis in nibh vel risus.</div>
+        <div class="swiper-slide">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
+            congue. Lorem ipsum primis in nibh vel risus.
+        </div>
+        <div class="swiper-slide">
+            Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
+            congue. Lorem ipsum primis in nibh vel risus.
+        </div>
+        <div class="swiper-slide">
+            Aliquam sem. In hendrerit nulla quam nunc, accumsan
+            congue. Lorem ipsum primis in nibh vel risus.
+        </div>
     </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
