--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,91 +1,5 @@
-
-.mobile-menu {
-    width: 100%;
-    max-width: 250px;
-    height: 100%;
-    max-height: 502px;
-    background-color: var(--mobile-menu-bg-color);
-    box-shadow: -8px 0px 20px rgba(0, 0, 0, 0.25);
-    padding-top: 60px;
-
-    position: absolute;
-    top: 0;
-    left: 50%;
-
-    transform: translateX(-44%);
-
-
-    &-btn {
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.313;
-        color: var(--dark-pink);
-
-        width: 209px;
-        height: 44px;
-        border-radius: 22px;
-        border: none;
-        background-color: var(--white);
-
-        padding-left: 48px;
-        padding-right: 70px;
-        
-        position: relative;
-
-        &-icon {
-            width: 20%;
-            height: 20%;
-            position: absolute;
-            top: 19px;
-            right: 32px;
-        }
-    }
-}
-
-.mobile-menu-button-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 19px;
-}
-
-.menu-list-link {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.286;
-    color: var(--white);
-
-    padding-top: 12px;
-    padding-bottom: 12px;
-    display: inline-block;
-}
-
-
-.menu-list-item {
-    padding-left: 21px;
-    border-top: 1px solid var(--mobile-menu-pseudo-color);
-}
-
-.menu-close-btn {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-}
-
-.menu-close-icon {
-    width: 30px;
-    height: 30px;
-    fill: var(--white);
-
-    position: absolute;
-    top: 15px;
-    right: 18px;
-}
-
-//=======
-
 header{
-    background-color: var(--hero-pink);
+    background-color: var(--pink);
     font-family: 'DM Sans', sans-serif;
     @include font-mobile($fs:14px, $lh:18px);
     color: var(--white);
@@ -106,7 +20,7 @@ header{
         width: 40px;
         height: 40px;
         border: none;
-        background-color: Transparent;
+        background-color: var(--pink);
         fill: var(--dark-pink);
         cursor: pointer;
     }
@@ -119,8 +33,7 @@ header{
             position: relative;
             justify-content: space-between;
             align-items: center;
-            padding-top: 6px;
-            padding-bottom: 27px;
+            padding: 6px 0;
         }
         .burger{
             position: absolute;
@@ -141,8 +54,6 @@ header{
             padding-bottom: 7px;
         }
         .burger{
-            position: relative;
-            z-index: 1;
             margin-left: auto;
             margin-right: 30px;
 
@@ -183,7 +94,7 @@ header{
         }
     }
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1280px) {
         .container{
             @include font-desktop();
             position: relative;
@@ -227,4 +138,3 @@ header{
 
     
 }
-
