--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,7 @@
-<section class="about" id="about">
+<section class="about-section">
+<div class="about" id="about">
         <div class="container">
+            
             <p class="about-subtitle">tradition and love</p>
             <h2 class="titles">how it’s made?</h2>
             <div class="about-content-div">
@@ -57,4 +59,4 @@
                 </div>
             </div>
         </div>
-        </section>
+    </div></section>    
