--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,14 +1,76 @@
 <section class="container">
-  <!-- <h2>Contacts</h2> -->
+  <!-- <h1>Contacts</h1> -->
   <div class="contacts">
-    <ul class="contacts-cards list"">
+    <ul class="contacts-cards">
+      <li>
+        <p class="contacts-tittle">Cafe</p>
+        <p class="contacts-town">Chicago</p>
+        <span class="contacts-about"
+          >Fusce ut velit laoreet, tempus arcu molestie vulputate</span
+        >
+        <ul class="contacts-work-list">
+          <li>
+            <p class="contacts-work-days">Monday - Friday</p>
+            <span class="contacts-work-time">06:00 AM - 10:00 PM</span>
+          </li>
+          <li>
+            <p class="contacts-work-days">Saturday - Sunday</p>
+            <span class="contacts-work-time">08:00 AM - 16:00 PM</span>
+          </li>
+        </ul>
+        <ul class="contscts-nav">
+          <li>
+            <a href="tel:+61(0)383766284" class="contacts-item"
+              >+61(0) 383 766 284</a
+            >
+          </li>
+          <li>
+            <a href="mailto:noreply@envato.com" class="contacts-item"
+              >noreply@envato.com</a
+            >
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="contacts-cards">
+      <li class="contacts-list">
+        <p class="contacts-tittle">FOODTRUCK</p>
+        <p class="contacts-town">Chicago</p>
+        <span class="contacts-about"
+          >Fusce ut velit laoreet, tempus arcu molestie vulputate</span
+        >
+        <ul class="contacts-work-list">
+          <li>
+            <p class="contacts-work-days">Monday - Friday</p>
+            <span class="contacts-work-time">06:00 AM - 10:00 PM</span>
+          </li>
+          <li>
+            <p class="contacts-work-days">Saturday - Sunday</p>
+            <span class="contacts-work-time">08:00 AM - 16:00 PM</span>
+          </li>
+        </ul>
+        <ul class="contscts-nav">
+          <li>
+            <a href="tel:+61(0)383766284" class="contacts-item"
+              >+61(0) 383 766 284</a
+            >
+          </li>
+          <li>
+            <a href="mailto:noreply@envato.com" class="contacts-item"
+              >noreply@envato.com</a
+            >
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="contacts-cards">
       <li class="contacts-list">
         <p class="contacts-tittle">Cafe</p>
         <p class="contacts-town">Chicago</p>
         <span class="contacts-about"
           >Fusce ut velit laoreet, tempus arcu molestie vulputate</span
         >
-        <ul class="contacts-work-list list">
+        <ul class="contacts-work-list">
           <li>
             <p class="contacts-work-days">Monday - Friday</p>
             <span class="contacts-work-time">06:00 AM - 10:00 PM</span>
@@ -18,7 +80,7 @@
             <span class="contacts-work-time">08:00 AM - 16:00 PM</span>
           </li>
         </ul>
-        <ul class="contscts-nav list">
+        <ul class="contscts-nav">
           <li>
             <a href="tel:+61(0)383766284" class="contacts-item"
               >+61(0) 383 766 284</a
@@ -32,80 +94,5 @@
         </ul>
       </li>
     </ul>
-    <ul class="contacts-cards list">
-      <li class="contacts-list">
-        <p class="contacts-tittle food">FOODTRUCK</p>
-        <p class="contacts-town">Chicago</p>
-        <span class="contacts-about"
-          >Fusce ut velit laoreet, tempus arcu molestie vulputate</span
-        >
-        <ul class="contacts-work-list list">
-          <li>
-            <p class="contacts-work-days">Monday - Friday</p>
-            <span class="contacts-work-time">06:00 AM - 10:00 PM</span>
-          </li>
-          <li>
-            <p class="contacts-work-days">Saturday - Sunday</p>
-            <span class="contacts-work-time">08:00 AM - 16:00 PM</span>
-          </li>
-        </ul>
-        <ul class="contscts-nav list">
-          <li>
-            <a href="tel:+61(0)383766284" class="contacts-item"
-              >+61(0) 383 766 284</a
-            >
-          </li>
-          <li>
-            <a href="mailto:noreply@envato.com" class="contacts-item"
-              >noreply@envato.com</a
-            >
-          </li>
-        </ul>
-      </li>
-    </ul>
-    <ul class="contacts-cards list">
-      <li class="contacts-list">
-        <p class="contacts-tittle">Cafe</p>
-        <p class="contacts-town">Chicago</p>
-        <span class="contacts-about"
-          >Fusce ut velit laoreet, tempus arcu molestie vulputate</span
-        >
-        <ul class="contacts-work-list list">
-          <li>
-            <p class="contacts-work-days">Monday - Friday</p>
-            <span class="contacts-work-time">06:00 AM - 10:00 PM</span>
-          </li>
-          <li>
-            <p class="contacts-work-days">Saturday - Sunday</p>
-            <span class="contacts-work-time">08:00 AM - 16:00 PM</span>
-          </li>
-        </ul>
-        <ul class="contscts-nav list">
-          <li>
-            <a href="tel:+61(0)383766284" class="contacts-item"
-              >+61(0) 383 766 284</a
-            >
-          </li>
-          <li>
-            <a href="mailto:noreply@envato.com" class="contacts-item"
-              >noreply@envato.com</a
-            >
-          </li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-
-  <div>
-    <ul class="list">
-      <li class="contacts-button-list">
-    <button class="contact-button">Our Locations  ></button>        
-      </li>
-      <li class="contacts-button-list">
-    <button class="contact-button">Franchise  ></button>
-      </li>
-    </ul>
-
-
   </div>
 </section>
