--- a/src/sass/components/_modal-window.scss
+++ b/src/sass/components/_modal-window.scss
@@ -53,7 +53,7 @@
   @media screen and (min-width: 768px) {
     & {
       width: 100%;
-      max-width: 600px;
+      max-width: 100vw;
       height: 700px;
       padding-left: 20px;
       padding-right: 20px;
@@ -82,9 +82,9 @@
 
   display: flex;
   align-items: center;
-  fill: black;
+  fill: var(--dark-pink);
   &:hover .close-modal-button {
-    fill: #0000ff;
+    fill: var(--pink);
   }
 }
 .modal-discrption-text.strong {
