--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,270 +1,264 @@
-header{
-    background-color: var(--hero-pink);
-    font-family: 'DM Sans', sans-serif;
-    @include font-mobile($fs:14px, $lh:18px);
-    color: var(--white);
-    position: relative;
-    .container{
-        display: flex;
+header {
+  background-color: var(--hero-pink);
+  font-family: 'DM Sans', sans-serif;
+  @include font-mobile($fs: 14px, $lh: 18px);
+  color: var(--white);
+  position: relative;
+  .container {
+    display: flex;
+  }
+  nav {
+    display: flex;
+  }
+  .list {
+    display: flex;
+  }
+  .burger {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background-color: Transparent;
+    fill: var(--dark-pink);
+    cursor: pointer;
+  }
+  .link {
+    color: inherit;
+  }
+
+  @media screen and (max-width: 767px) {
+    .container {
+      position: relative;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 6px;
+      padding-bottom: 27px;
     }
-    nav{
-        display: flex;
+    .burger {
+      position: absolute;
+      top: 11px;
+      right: -10px;
     }
-    .list{
-        display: flex;
+    .buy-now {
+      @include font-mobile($fs: 16px);
+      display: none;
     }
-    .burger{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0;
-        width: 40px;
-        height: 40px;
-        border: none;
-        background-color: Transparent;
-        fill: var(--dark-pink);
-        cursor: pointer;
+  }
+
+  @media screen and (min-width: 768px) {
+    .container {
+      @include font-tablet($lh: 18px);
+      align-items: center;
+      padding-top: 37px;
+      padding-bottom: 7px;
     }
-    .link{
-        color: inherit;
+    .burger {
+      position: relative;
+      z-index: 2;
+      margin-left: auto;
+      margin-right: 30px;
     }
+    .buy-now {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      @include font-tablet($fs: 16px);
+      color: var(--dark-pink);
+      padding: 0;
+      width: 160px;
+      height: 44px;
+      border-radius: 22px;
+      background-color: var(--white);
+      border: none;
+      cursor: pointer;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    @media screen and (max-width: 767px) {
-        .container{
-            position: relative;
-            justify-content: space-between;
-            align-items: center;
-            padding-top: 6px;
-            padding-bottom: 27px;
-        }
-        .burger{
-            position: absolute;
-            top: 11px;
-            right: -10px;
-        }
-        .buy-now{
-            @include font-mobile($fs:16px);
-            display: none;
-        }
+      svg {
+        display: block;
+        margin-left: 12px;
+        margin-top: 17px;
+        margin-bottom: 15px;
+        align-self: center;
+      }
+
+      &:hover,
+      &:focus {
+        background-color: var(--accent);
+      }
     }
-
-    @media screen and (min-width: 768px) {
-        .container{
-            @include font-tablet($lh: 18px);
-            align-items: center;
-            padding-top: 37px;
-            padding-bottom: 7px;
-        }
-        .burger{
-            position: relative;
-            z-index: 2;
-            margin-left: auto;
-            margin-right: 30px;
-
-        }
-        .buy-now{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            @include font-tablet($fs: 16px);
-            color: var(--dark-pink);
-            padding: 0;
-            width: 160px;
-            height: 44px;
-            border-radius: 22px;
-            background-color: var(--white);
-            border: none;
-            cursor: pointer;
-            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-            svg{
-                display: block;
-                margin-left: 12px;
-                margin-top: 17px;
-                margin-bottom: 15px;
-                align-self: center;
-            }
-            
-    
-            &:hover,
-            &:focus{
-                background-color: var(--accent) ;
-            }
-        }
+  }
+  @media screen and (max-width: 1279px) {
+    nav .list {
+      display: none;
     }
-    @media screen and (max-width: 1279px) {
-        nav .list{
-            display: none;
-        }
+  }
+
+  @media screen and (min-width: 1280px) {
+    .container {
+      @include font-desktop();
+      position: relative;
+      align-items: center;
+      justify-content: flex-end;
+      padding-top: 32px;
+      padding-bottom: 69px;
     }
-
-    @media screen and (min-width: 1280px) {
-        .container{
-            @include font-desktop();
-            position: relative;
-            align-items: center;
-            justify-content: flex-end;
-            padding-top: 32px;
-            padding-bottom: 69px;
-        }
-        .burger{
-            display: none;
-        }
-
-        nav {
-            align-items: center;
-            // margin-left: calc((100% - 568px)/4);
-            margin-right: calc(((100% - 568px)/2) - 160px);
-            z-index: 2;
-        }
-
-        .link{
-            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-            &:hover,
-            &:focus{
-                color: var(--dark-pink);
-            }
-        }
-
-
-
-        .item:not(:last-child){
-            margin-right: 35px;
-        }
-
-        .logo{
-            position: absolute;
-            left: -69px;
-            top: 31px;
-        }
-
-    }
-    
-    .mobile-menu {
-        width: 100%;
-        max-width: 250px;
-        height: 100vh;
-        max-height: 502px;
-        background-color: var(--mobile-menu-bg-color);
-        box-shadow: -8px 0px 20px rgba(0, 0, 0, 0.25);
-        padding-top: 60px;
-        z-index: 150;
-    
-        position: fixed;
-        top: 0;
-        right: 0;
-    
-        transform: translateX(100%); 
-        transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);    
-        opacity: 0;
-        pointer-events: none;
-      
-        &.is-open{
-            opacity: 1;
-            transform: translateX(0%);
-            pointer-events: auto;
-        }
-        &-btn {
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 1.313;
-            color: var(--dark-pink);
-    
-            width: 209px;
-            height: 44px;
-            border-radius: 22px;
-            border: none;
-            background-color: var(--white);
-    
-            padding-left: 48px;
-            padding-right: 70px;
-            
-            position: relative;
-            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-
-            &:hover,
-            &:focus {
-                background-color: var(--accent) ;
-            }
-    
-            &-icon {
-                width: 20%;
-                height: 20%;
-                position: absolute;
-                top: 19px;
-                right: 32px;
-            }
-        }
+    .burger {
+      display: none;
     }
 
-    @media screen and (min-width: 768px) {
-        .mobile-menu {
-            max-width: 254px;
-            max-height: 1020px;
-        }
+    nav {
+      align-items: center;
+      // margin-left: calc((100% - 568px)/4);
+      margin-right: calc(((100% - 568px) / 2) - 160px);
+      z-index: 2;
     }
-    
-    .mobile-menu-button-wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 19px;
-    }
-    .menu-list{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    .menu-list-link {
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.286;
-        color: var(--white);
-        display: inline;
-    
-        padding-top: 12px;
-        padding-bottom: 12px;
-        display: inline-block;
 
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .link {
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-        &:focus, 
-        &:hover {
-            color: var(--dark-pink);
-        }
+      &:hover,
+      &:focus {
+        color: var(--dark-pink);
+      }
     }
-    
-    .menu-list-item {
-        width: 100%;
-        padding-left: 21px;
-        border-top: 1px solid var(--mobile-menu-pseudo-color);
 
-        &:last-child {
-            border-bottom: 1px solid var(--mobile-menu-pseudo-color);
-        }
+    .item:not(:last-child) {
+      margin-right: 35px;
     }
-    
-    .menu-close-btn {
-        background-color: transparent;
-        border: none;
-        padding: 0;
 
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-        &:focus{
-           fill: var(--dark-pink);
-        }
+    .logo {
+      position: absolute;
+      left: -69px;
+      top: 31px;
     }
-    
-    .menu-close-icon {
-        width: 30px;
-        height: 30px;
-        fill: var(--white);
-    
+  }
+
+  .mobile-menu {
+    width: 100%;
+    max-width: 250px;
+    height: 100vh;
+    // max-height: 502px;
+    background-color: var(--mobile-menu-bg-color);
+    box-shadow: -8px 0px 20px rgba(0, 0, 0, 0.25);
+    padding-top: 60px;
+    z-index: 150;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+
+    transform: translateX(100%);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0;
+    pointer-events: none;
+
+    &.is-open {
+      opacity: 1;
+      transform: translateX(0%);
+      pointer-events: auto;
+    }
+    &-btn {
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 1.313;
+      color: var(--dark-pink);
+
+      width: 209px;
+      height: 44px;
+      border-radius: 22px;
+      border: none;
+      background-color: var(--white);
+
+      padding-left: 48px;
+      padding-right: 70px;
+
+      position: relative;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &:focus {
+        background-color: var(--accent);
+      }
+
+      &-icon {
+        width: 20%;
+        height: 20%;
         position: absolute;
-        top: 15px;
-        right: 19px;
+        top: 19px;
+        right: 32px;
+      }
     }
-}
+  }
 
+  @media screen and (min-width: 768px) {
+    .mobile-menu {
+      max-width: 254px;
+      max-height: 1020px;
+    }
+  }
+
+  .mobile-menu-button-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 19px;
+  }
+  .menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .menu-list-link {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.286;
+    color: var(--white);
+    display: inline;
+
+    padding-top: 12px;
+    padding-bottom: 12px;
+    display: inline-block;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus,
+    &:hover {
+      color: var(--dark-pink);
+    }
+  }
+
+  .menu-list-item {
+    width: 100%;
+    padding-left: 21px;
+    border-top: 1px solid var(--mobile-menu-pseudo-color);
+
+    &:last-child {
+      border-bottom: 1px solid var(--mobile-menu-pseudo-color);
+    }
+  }
+
+  .menu-close-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus {
+      fill: var(--dark-pink);
+    }
+  }
+
+  .menu-close-icon {
+    width: 30px;
+    height: 30px;
+    fill: var(--white);
+
+    position: absolute;
+    top: 15px;
+    right: 19px;
+  }
+}
